--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@
   --color-start: #5b85b7;
   --color-neutral: #707682;
   --color-neutral-light: #d2d2d2;
-  --color-keys: #37474f;
+  --color-keys: #fb0707;
   --color-keys-light: #e5e5e5;
   --font-size-large: 60px;
   --font-size-medium: 20px;
@@ -20,6 +20,7 @@
 .imgTries {
   height: 35px;
   width: 30px;
+  margin-right: 5px;
 }
 
 /* main */
@@ -61,6 +62,13 @@ button {
   -webkit-transition: var(--transition);
   -o-transition: var(--transition);
   transition: var(--transition);
+  cursor: pointer;
+  transition: transform 0.2s, background 0.2s;
+}
+
+button:hover {
+  transform: scale(1.15);
+  background-color: #b5dbef;
 }
 
 .main-container {
@@ -90,10 +98,14 @@ button {
   height: 65px;
   width: 65px;
   padding: 20px 1px 0 1px;
-  margin-right: 2px;
+  margin-right: 5px;
   color: transparent;
   background: var(--color-neutral-light);
   border-radius: 5px;
+  transition: transform 0.2s, background 0.2s;
+}
+.letter:hover {
+  transform: scale(1.15);
 }
 
 .space {
